# IPC_Communication

./: README.md
basic/: read.c++
loop/: read  read.c++  read.py  write  write.c++
opencv_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv_test  opencv_test.cpp
pipe/: Main_Control  Main_Control.c  int_array_write.c  string_write.c
pipe/c_to_py_pipe/: read.py  test  test.c  test1  test1.c  write.py
pipe/py_to_py_pipe/: consumer.py  producer.py
shared_memory/basic/: read  read.py  write  write.c++  write.py
shared_memory/loop/: read  read.c++  read.py  write  write.c++  write.py
shared_memory/mutex/: read  read.c++  read.py  read1.py  write  write.c++  write.py
shared_memory/mutex/image/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  just_read  just_read.cpp  just_write  just_write.cpp  read  read.cpp  write  write.cpp
